[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=8.0.0",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "dkist"
description = "DKIST User Tools"
requires-python = ">=3.11"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "licenses/LICENSE.rst" }
authors = [
  { name = "NSO / AURA", email = "stuart@cadair.com" },
]
dependencies = [
  "aiohttp>=3.9",
  # Provide minimum deps for all asdf packages used to generate or read asdf
  # files so that we test with these minimums and also generate asdf's with
  # them
  # Some of these schema dependencies are minimums because we generated asdf
  # files with them unpinned so they are now required to read generated asdf
  # files.
  "asdf>=3.3.0",  # Required by gwcs 0.24
  "asdf-astropy>=0.5.0",  # Required by gwcs 0.24
  "asdf-coordinates-schemas>=0.3.0",  # required by wcs-schemas 0.4
  "asdf-standard>=1.1.0",
  "asdf-transform-schemas>=0.6.0",
  "asdf-wcs-schemas>=0.4.0",  # required by gwcs 0.24
  "astropy>=6.0",  # required by gwcs 0.24
  "dask[array]>=2023.2.0",
  "globus-sdk>=3.0",
  "gwcs>=0.24.0",  # Inverse transform fix
  "matplotlib>=3.7",
  "ndcube[plotting,reproject]>=2.1",
  "numpy>=1.25",
  "parfive[ftp]>=2.2.0",
  "platformdirs>=3.0",
  "packaging>=23.0",
  "sunpy[net,asdf]>=5.0.7",
  "tqdm>=4.65",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-asdf-plugin",
  "pytest-doctestplus",
  "pytest-cov",
  "pytest-remotedata",
  "pytest-mock",
  "pytest-mpl",
  "pytest-httpserver",
  "pytest-filter-subpackage",
  "pytest-benchmark",
  "pytest-xdist",
  "pytest-lazy-fixtures",
  "hypothesis",
  "tox",
  "pydot",
]
docs = [
  "sphinx",
  "sphinx-automodapi",
  "sphinx-changelog",
  "sunpy-sphinx-theme",
  "sphinx-astropy",
  "sphinx-gallery",
  "pytest",
  "sphinx_autodoc_typehints",
  "dkist-sphinx-theme>=2.0",
  "sphinx-design",
  "myst-nb",
  "ipywidgets",
  "accessible-pygments",
  "reproject[all]",
  "sunpy[net,asdf]>=6.1.0",  # Needed for the VBI extent example
  "snowballstemmer<3",  # Not sure what package we have a transitive dep on this but 3.0 broke it
  "distributed",
]

[project.urls]
Homepage = "https://github.com/DKISTDC/dkist"
"Source Code" = "https://github.com/DKISTDC/dkist"
Download = "https://pypi.org/project/dkist"
Documentation = "https://docs.dkist.nso.edu/projects/python-tools/en/stable/"
Changelog = "https://docs.dkist.nso.edu/projects/python-tools/en/stable/whatsnew/changelog.html"
"Issue Tracker" = "https://github.com/DKISTDC/dkist/issues"

[project.entry-points]
'asdf.extensions' = {dkist = 'dkist.io.asdf.entry_points:get_extensions'}
'asdf.resource_mappings' = {dkist = 'dkist.io.asdf.entry_points:get_resource_mappings'}

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
include = ["dkist*"]
exclude = ["dkist._dev*"]

[tool.setuptools_scm]
version_file = "dkist/_version.py"

[tool.gilesbot]
  [ tool.gilesbot.pull_requests ]
    enabled = true

  [ tool.gilesbot.towncrier_changelog ]
    enabled = true
    verify_pr_number = true
    changelog_skip_label = "No Changelog Entry Needed"
    help_url = "https://github.com/DKISTDC/dkist/blob/main/changelog/README.rst"

    changelog_missing_long = "There isn't a changelog file in this pull request. Please add a changelog file to the `changelog/` directory following the instructions in the changelog [README](https://github.com/DKISTDC/dkist/blob/main/changelog/README.rst)."

    type_incorrect_long = "The changelog file you added is not one of the allowed types. Please use one of the types described in the changelog [README](https://github.com/DKISTDC/dkist/blob/main/changelog/README.rst)"

    number_incorrect_long = "The number in the changelog file you added does not match the number of this pull request. Please rename the file."

  [ tool.gilesbot.milestones ]
    enabled = false

  [ tool.gilesbot.circleci_artifacts]
    enabled = true

  [ tool.gilesbot.circleci_artifacts.figure_report]
    url = "py312-figure/figure_test_images/fig_comparison.html"
    message = "Click details to see the figure test comparisons, for py312-figure."
    report_on_fail = true

  [ tool.gilesbot.circleci_artifacts.figure_devdeps_report]
    url = "py312-figure-devdeps/figure_test_images/fig_comparison.html"
    message = "Click details to see the figure test comparisons, for py312-figure-devdeps."
    report_on_fail = true

[tool.towncrier]
  package = "dkist"
  filename = "CHANGELOG.rst"
  directory = "changelog/"
  issue_format = "`#{issue} <https://github.com/DKISTDC/dkist/pull/{issue}>`__"
  title_format = "{version} ({project_date})"

  [[tool.towncrier.type]]
      directory = "breaking"
      name = "Backwards Incompatible Changes"
      showcontent = true

  [[tool.towncrier.type]]
      directory = "api"
      name = "API Changes"
      showcontent = true

  [[tool.towncrier.type]]
    directory = "removal"
    name = "Deprecations and Removals"
    showcontent = true

  [[tool.towncrier.type]]
    directory = "feature"
    name = "Features"
    showcontent = true

  [[tool.towncrier.type]]
    directory = "bugfix"
    name = "Bug Fixes"
    showcontent = true

  [[tool.towncrier.type]]
    directory = "doc"
    name = "Improved Documentation"
    showcontent = true

  [[tool.towncrier.type]]
    directory = "trivial"
    name = "Trivial/Internal Changes"
    showcontent = true

  [[tool.towncrier.type]]
    directory = "performance"
    name = "Performance Improvements"
    showcontent = true
