[metadata]
name = dkist
author = NSO / AURA
author_email = stuart@cadair.com
description = DKIST User Tools
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD 3-Clause
url = http://dkist.nso.edu
edit_on_github = True
github_project = DKISTDC/dkist
classifiers =
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11

[options]
python_requires = >=3.9
packages = find:
include_package_data = True
install_requires =
  appdirs>=1.4
  asdf>=2.9.2
  asdf-astropy>=0.1.1
  asdf-transform-schemas
  astropy>=5
  dask[array]>=2021.8.0
  globus-sdk>=3.0
  gwcs>=0.18.0
  matplotlib>=3.5
  ndcube[plotting,reproject]>=2.0
  numpy>=1.22
  parfive[ftp]>=1.5
  sunpy[net,asdf]>=4.0.7
  setuptools>=59
  jsonschema>=3.2
  aiohttp>=3.6
  tqdm>=4.63
setup_requires = setuptools_scm

[options.extras_require]
tests =
  dkist-data-simulator
  dkist-inventory
  pytest-astropy
  pytest-cov
  pytest-mock
  pytest-mpl
  pytest-httpserver
  hypothesis
  tox
docs =
  sphinx
  sphinx-astropy
  sphinx-gallery
  sphinx-changelog
  pytest
  sphinx_autodoc_typehints
  dkist-sphinx-theme>=1.1.2
  sphinx-design
  myst-nb
  ipywidgets
  accessible-pygments

[options.entry_points]
asdf.resource_mappings =
  dkist = dkist.io.asdf.entry_points:get_resource_mappings
asdf.extensions =
  dkist = dkist.io.asdf.entry_points:get_extensions

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload_dir = docs/_build/html
show_response = 1

[tool:pytest]
minversion = 3.0
testpaths = "dkist" "docs"
norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "examples" ".history"
doctest_plus = enabled
doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
addopts = --doctest-ignore-import-errors --doctest-rst
markers =
    online: marks this test function as needing online connectivity.
    figure: marks this test function as using hash-based Matplotlib figure verification. This mark is not meant to be directly applied, but is instead automatically applied when a test function uses the @sunpy.tests.helpers.figure_test decorator.
# Disable internet access for tests not marked remote_data
remote_data_strict = True
asdf_schema_root = dkist/io/asdf/resources/
asdf_schema_tests_enabled = true
filterwarnings =
    error
    always::PendingDeprecationWarning
    # Some tests use data that have dates in the future and ERFA does not like.
    ignore:ERFA function "d2dtf"*
    ignore:ERFA function "dtf2d"*
    ignore:ERFA function "utctai"*
    ignore:ERFA function "taiutc"*
    ignore:ERFA function "utcut1"*
    ignore:Tried to get polar motions for times after IERS data is valid*
    # Zeep deprecation warning
    ignore:defusedxml.lxml is no longer supported and will be removed in a future release.
    # This is due to dependencies building with a numpy version different from
    # the local installed numpy version, but should be fine
    # See https://github.com/numpy/numpy/issues/15748#issuecomment-598584838
    ignore:numpy.ufunc size changed:RuntimeWarning
    ignore:numpy.ndarray size changed:RuntimeWarning
    # This isn't really an issue it's an annoyance, it's triggered by printing
    # an astropy table inside a test, which is generally only done when
    # debugging.
    ignore:the imp module is deprecated in favour of importlib:DeprecationWarning:ipykernel.iostream
    # Ignore warnings about asdf versions
    ignore:File.*asdf.extension.BuiltinExtension.*:asdf.exceptions.AsdfWarning
    # pytest / asdf interaction
    ignore:The .* argument to AsdfSchemaFile is deprecated
    # gwcs main has the wrong version number: https://github.com/spacetelescope/gwcs/issues/399
    ignore:File.*from package gwcs\=\=0\.18\.0\), but older package \(gwcs.*\) is installed.
    # Ignore asdf older version errors
    ignore: File.* was created with extension.*but older package.*is installed.
    ignore:The distutils.sysconfig module is deprecated, use sysconfig instead:DeprecationWarning
    ignore:ASDF functionality for astropy is being moved out of the astropy package to the new asdf-astropy package
    ignore:FLIP_TOP_BOTTOM is deprecated and will be removed in Pillow.*
    ignore::ResourceWarning
    # Zeep relies on deprecated cgi in Python 3.11
    ignore:'cgi' is deprecated and slated for removal in Python 3.13:DeprecationWarning:zeep.utils
    # Oldestdeps below here
    ignore:`np.float` is a deprecated alias for the builtin `float`. To silence this warning, use `float` by itself.::dask.array
    ignore:leap-second auto-update failed due to the following exception

[flake8]
exclude = extern,sphinx,*parsetab.py,conftest.py,docs/conf.py,setup.py,__init__.py
max-line-length = 100
ignore = I1,D1,D200
docstring-convention=numpy

[pylint]
disable = W,R

[yapf]
column_limit = 100

[pycodestyle]
max_line_length = 100
select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
exclude = extern,sphinx,*parsetab.py

[coverage:run]
omit =
  dkist/conftest.py
  dkist/cython_version*
  dkist/*setup*
  dkist/extern/*
  dkist/*/tests/*
  dkist/version*
  dkist/__init__*
  dkist/_sunpy_init*
  */dkist/conftest.py
  */dkist/cython_version*
  */dkist/*setup*
  */dkist/extern/*
  */dkist/*/tests/*
  */dkist/version*
  */dkist/__init__*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
